# Lox

./: .gitignore  .gitmodules  README.md  lox.cabal  stack.yaml  test.sh
.github/workflows/: lox.yaml
app/: Main.hs
src/main/Lox/: Interpreter.hs  Scanner.hs
src/main/Lox/Evaluator/: ControlFlow.hs  Effect.hs  EvalError.hs  Evaluator.hs  Function.hs  Program.hs  Type.hs  Value.hs  World.hs
src/main/Lox/Evaluator/Internal/: ControlFlow.hs  Data.hs  Effect.hs  EvalError.hs  Evaluator.hs  Function.hs  GC.hs  OOP.hs  Program.hs  Scope.hs  Type.hs  Value.hs  Variable.hs  World.hs
src/main/Lox/Evaluator/Internal/Eval/: Common.hs  Evaluator.hs  Expr.hs  Statement.hs
src/main/Lox/Evaluator/Internal/Program/: ControlFlow.hs  Effect.hs  EvalError.hs  Function.hs  GC.hs  OOP.hs  Program.hs  Scope.hs  Type.hs  Value.hs  Variable.hs
src/main/Lox/Parser/: AST.hs  LoxParser.hs  Parser.hs  ParserError.hs  Program.hs
src/main/Lox/Parser/Internal/: AST.hs  ExpressionParser.hs  LoxParser.hs  Nihilism.hs  Optimism.hs  Parse.hs  Parser.hs  ParserError.hs  Program.hs
src/main/Lox/Scanner/: ParserError.hs  Scanner.hs  ScannerError.hs  Token.hs
src/main/Lox/Scanner/Internal/: Classify.hs  Identifier.hs  Number.hs  ParserError.hs  Scanner.hs  ScannerError.hs  ScannerState.hs  String.hs  Token.hs
src/main/Lox/Verifier/: Verifier.hs  VerifierError.hs
src/main/Lox/Verifier/Internal/: BlockVerifier.hs  Common.hs  ExprVerifier.hs  Verifier.hs  VerifierError.hs
src/main/Lox/Verify/: Verifier.hs  VerifierError.hs
src/main/Lox/Verify/Internal/: Verifier.hs  VerifierError.hs
