Cabal-Version:       3.8
Name:                lox
Version:             1.0
Category:            Web
Stability:           Experimental
Build-type:          Simple

Executable lox
  hs-source-dirs:      app
  main-is:             Main.hs
  GHC-Options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-import-lists
    -Wredundant-constraints
    -fno-warn-name-shadowing
    -funbox-strict-fields
    -threaded
    -O2
  default-language:    GHC2024
  default-extensions:  OverloadedRecordDot, OverloadedStrings
  build-depends:       bizzlelude,
                       containers,
                       lox,
                       mtl,
                       text,
                       validation

Library
  hs-source-dirs:      src/main
  exposed-modules:
    Lox.Interpreter,
    Lox.Evaluator.Effect,
    Lox.Evaluator.Evaluator,
    Lox.Evaluator.EvalError,
    Lox.Evaluator.Type,
    Lox.Evaluator.Value,
    Lox.Evaluator.World,
    Lox.Parser.Parser,
    Lox.Parser.ParserError,
    Lox.Parser.Program,
    Lox.Scanner.Scanner,
    Lox.Scanner.ScannerError,
    Lox.Scanner.Token
  default-language:    GHC2024
  default-extensions:  OverloadedRecordDot, OverloadedStrings
  other-modules:
    Lox.Evaluator.Internal.Effect,
    Lox.Evaluator.Internal.EvalError,
    Lox.Evaluator.Internal.Type,
    Lox.Evaluator.Internal.Value,
    Lox.Evaluator.Internal.World,
    Lox.Parser.Internal.ExpressionParser,
    Lox.Parser.Internal.Parse,
    Lox.Parser.Internal.Parser,
    Lox.Parser.Internal.ParserError,
    Lox.Parser.Internal.Program,
    Lox.Scanner.Internal.Classify,
    Lox.Scanner.Internal.Identifier,
    Lox.Scanner.Internal.Number,
    Lox.Scanner.Internal.ScannerError,
    Lox.Scanner.Internal.ScannerState,
    Lox.Scanner.Internal.String,
    Lox.Scanner.Internal.Token
  GHC-Options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-import-lists
    -Wredundant-constraints
    -fno-warn-name-shadowing
    -funbox-strict-fields
    -O2
  Build-depends:
    bizzlelude >= 4.20.2.0.1 && < 4.21.0,
    bytestring >= 0.12.2  && < 0.13.0,
    containers >= 0.7     && < 0.8,
    directory  >= 1.3.7   && < 1.4.0,
    lens       >= 5.2.3   && < 5.3.0,
    mtl        >= 2.3.1   && < 2.4.0,
    text       >= 2.1.3   && < 2.2.0,
    validation >= 1.1.3   && < 1.2.0

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   src/test
  default-language: GHC2024
  build-depends:
    test-framework             >= 0.8,
    test-framework-hunit       >= 0.3
