Cabal-Version:       3.8
Name:                lox
Version:             1.0
Category:            Web
Stability:           Experimental
Build-type:          Simple

Common common
  Default-Language:   GHC2024
  Default-Extensions: OverloadedRecordDot, OverloadedStrings
  Build-Depends:
    bizzlelude >= 4.20.2.0.1 && < 4.21.0,
  GHC-Options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-import-lists
    -Wredundant-constraints
    -fno-warn-name-shadowing
    -funbox-strict-fields
    -O2

Executable lox
  Import:          common
  Hs-Source-Dirs:  app
  Main-Is:         Main.hs
  Build-Depends:
    containers,
    lox,
    mtl,
    text,
    time >= 1.12.0 && < 1.13.0,

Library
  Import:          common
  Hs-Source-Dirs:  src/main
  Exposed-Modules:
    Lox.Interpreter,
    Lox.Evaluator.ControlFlow,
    Lox.Evaluator.Effect,
    Lox.Evaluator.Evaluator,
    Lox.Evaluator.EvalError,
    Lox.Evaluator.Type,
    Lox.Evaluator.Value,
    Lox.Evaluator.World,
    Lox.Parser.Parser,
    Lox.Parser.ParserError,
    Lox.Parser.Program,
    Lox.Scanner.Scanner,
    Lox.Scanner.ScannerError,
    Lox.Scanner.Token
  Other-Modules:
    Lox.Evaluator.Internal.ControlFlow,
    Lox.Evaluator.Internal.Data,
    Lox.Evaluator.Internal.Effect,
    Lox.Evaluator.Internal.EvalError,
    Lox.Evaluator.Internal.Type,
    Lox.Evaluator.Internal.Value,
    Lox.Evaluator.Internal.World,
    Lox.Parser.Internal.ExpressionParser,
    Lox.Parser.Internal.Nihilism,
    Lox.Parser.Internal.Optimism,
    Lox.Parser.Internal.Parse,
    Lox.Parser.Internal.Parser,
    Lox.Parser.Internal.ParserError,
    Lox.Parser.Internal.Program,
    Lox.Scanner.Internal.Classify,
    Lox.Scanner.Internal.Identifier,
    Lox.Scanner.Internal.Number,
    Lox.Scanner.Internal.ScannerError,
    Lox.Scanner.Internal.ScannerState,
    Lox.Scanner.Internal.String,
    Lox.Scanner.Internal.Token
  Build-Depends:
    containers >= 0.7   && < 0.8,
    mtl        >= 2.3.1 && < 2.4.0,
    text       >= 2.1.3 && < 2.2.0,

test-suite tests
  Type:             exitcode-stdio-1.0
  Main-Is:          Main.hs
  Hs-Source-Dirs:   src/test
  Default-Language: GHC2024
  Build-Depends:
    test-framework             >= 0.8,
    test-framework-hunit       >= 0.3
