Cabal-Version:       3.8
Name:                lox
Version:             1.0
License:             CC0-1.0
Author:              TheBizzle
Maintainer:          TheBizzle
Homepage:            https://github.com/TheBizzle
Category:            Web
Synopsis:            An implementation of the jlox programming language
Description:         An implementation of the jlox programming language, from Robert Nystrom's book Crafting Interpreters
Stability:           Experimental
Build-type:          Simple

Source-Repository head
  type:     git
  location: https://github.com/TheBizzle/Lox.git

Common common
  Default-Language:   GHC2024
  Default-Extensions: OverloadedRecordDot, OverloadedStrings
  Build-Depends:
    bizzlelude >= 4.20.2.0.2 && < 4.21,
    deepseq    >= 1.5.0      && < 1.6,
  GHC-Options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-import-lists
    -Wredundant-constraints
    -fno-warn-name-shadowing
    -funbox-strict-fields
    -O2

Executable lox
  Import:          common
  Hs-Source-Dirs:  app
  Main-Is:         Main.hs
  Build-Depends:
    containers,
    lox,
    mtl,
    text,
    time >= 1.12.0 && < 1.13,

Library
  Import:          common
  Hs-Source-Dirs:  src/main
  Exposed-Modules:
    Lox.Interpreter,
    Lox.Evaluator.ControlFlow,
    Lox.Evaluator.Evaluator,
    Lox.Evaluator.EvalError,
    Lox.Evaluator.Function,
    Lox.Evaluator.Program,
    Lox.Evaluator.Value,
    Lox.Parser.AST,
    Lox.Parser.LoxParser,
    Lox.Parser.ParserError,
    Lox.Scanner.Scanner,
    Lox.Scanner.ScannerError,
    Lox.Scanner.Token,
    Lox.Verifier.Verifier,
    Lox.Verifier.VerifierError
  Other-Modules:
    Lox.Evaluator.Internal.Eval.Common,
    Lox.Evaluator.Internal.Eval.Evaluator,
    Lox.Evaluator.Internal.Eval.Expr,
    Lox.Evaluator.Internal.Eval.Statement,
    Lox.Evaluator.Internal.Program.ControlFlow,
    Lox.Evaluator.Internal.Program.Effect,
    Lox.Evaluator.Internal.Program.EvalError,
    Lox.Evaluator.Internal.Program.Function,
    Lox.Evaluator.Internal.Program.GC,
    Lox.Evaluator.Internal.Program.OOP,
    Lox.Evaluator.Internal.Program.Program,
    Lox.Evaluator.Internal.Program.Scope,
    Lox.Evaluator.Internal.Program.Type,
    Lox.Evaluator.Internal.Program.Value,
    Lox.Evaluator.Internal.Program.Variable,
    Lox.Parser.Internal.AST,
    Lox.Parser.Internal.ExpressionParser,
    Lox.Parser.Internal.LoxParser,
    Lox.Parser.Internal.Parser,
    Lox.Parser.Internal.ParserError,
    Lox.Scanner.Internal.Classify,
    Lox.Scanner.Internal.Identifier,
    Lox.Scanner.Internal.Number,
    Lox.Scanner.Internal.Scanner,
    Lox.Scanner.Internal.ScannerError,
    Lox.Scanner.Internal.ScannerState,
    Lox.Scanner.Internal.String,
    Lox.Scanner.Internal.Token,
    Lox.Verifier.Internal.BlockVerifier,
    Lox.Verifier.Internal.Common,
    Lox.Verifier.Internal.ExprVerifier,
    Lox.Verifier.Internal.Verifier,
    Lox.Verifier.Internal.VerifierError
  Build-Depends:
    containers >= 0.7   && < 0.8,
    mtl        >= 2.3.1 && < 2.4,
    text       >= 2.1.3 && < 2.2,
